--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -17,4 +17,10 @@ jobs:
                 sha: ${{ github.event.pull_request.head.sha }}
 
             - run: |
-                echo "${{ toJSON(fromJSON(steps.PR.outputs.pr)) }}"
+                echo "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/pulls/${{ steps.PR.outputs.number }}/comments"
+                
+                curl -L \
+                -H "Accept: application/vnd.github+json" \
+                -H "Authorization: Bearer $GITHUB_TOKEN" \
+                -H "X-GitHub-Api-Version: 2022-11-28" \
+                https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/pulls/${{ steps.PR.outputs.number }}/comments
