--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -17,8 +17,8 @@ jobs:
                 sha: ${{ github.event.pull_request.head.sha }}
 
             - run: |
-                echo "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/pulls/${{ steps.PR.outputs.number }}/comments"
-                
+                echo "https://api.github.com/repos/${{ github.repository }}/pulls/${{ steps.PR.outputs.number }}/comments"
+
                 curl -L \
                 -H "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer $GITHUB_TOKEN" \
