--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -21,6 +21,6 @@ jobs:
 
                 curl -L \
                 -H "Accept: application/vnd.github+json" \
-                -H "Authorization: Bearer $GITHUB_TOKEN" \
+                -H "Authorization: Bearer ${{ github.token }}" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/pulls/${{ steps.PR.outputs.number }}/comments
