--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -15,12 +15,13 @@ jobs:
               id: PR
               with:
                 sha: ${{ github.event.pull_request.head.sha }}
-
-            - run: |
+            - env: 
+                GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              run: |
                 echo "https://api.github.com/repos/${{ github.repository }}/pulls/${{ steps.PR.outputs.number }}/comments"
 
                 curl -L \
                 -H "Accept: application/vnd.github+json" \
-                -H "Authorization: Bearer ${{ github.token }}" \
+                -H "Authorization: Bearer $GH_TOKEN" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/pulls/${{ steps.PR.outputs.number }}/comments
