--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -7,7 +7,7 @@ on:
 jobs:
     send-on-merge:
         permissions:
-            pull-requests: read
+            read-all
         runs-on: ubuntu-latest
         if: github.event.pull_request.merged == true
         steps:
