--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -4,6 +4,10 @@ on:
     pull_request:
         types: [closed]
 
+env: 
+    GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    ENDPOINT: http://10.10.10.10:5000
+
 jobs:
     send-on-merge:
         permissions:
@@ -15,11 +19,19 @@ jobs:
               id: PR
               with:
                 sha: ${{ github.event.pull_request.head.sha }}
-            - env: 
-                GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Check out code
+              uses: actions/checkout@v2
+            
+            - name: Setup Python
+              uses: actions/setup-python@v2
+              with:
+                python-version: '3.x'
+            
+            - name: Install dependencies
               run: |
-                curl -L \
-                -H "Accept: application/vnd.github+json" \
-                -H "Authorization: Bearer $GH_TOKEN" \
-                -H "X-GitHub-Api-Version: 2022-11-28" \
-                https://api.github.com/repos/${{ github.repository }}/pulls/${{ steps.PR.outputs.number }}/comments
+                python -m pip install --upgrade pip
+                pip install requests==2.32.3
+              
+            - name: Send on merge
+              run: |
+                .github/scripts/api.py $GH_TOKEN ${{ github.repository }} $PR_NUMBER $ENDPOINT
