--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -4,8 +4,14 @@ on:
     pull_request:
         types: [closed]
 
+env: 
+    GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    ENDPOINT: ${{ secrets.ENDPOINT}}
+
 jobs:
     send-on-merge:
+        permissions:
+            read-all
         runs-on: ubuntu-latest
         if: github.event.pull_request.merged == true
         steps:
@@ -13,6 +19,19 @@ jobs:
               id: PR
               with:
                 sha: ${{ github.event.pull_request.head.sha }}
-
-            - run: |
-                echo "${{ toJSON(fromJSON(steps.PR.outputs.pr)) }}"
+            - name: Check out code
+              uses: actions/checkout@v2
+            
+            - name: Setup Python
+              uses: actions/setup-python@v2
+              with:
+                python-version: '3.x'
+            
+            - name: Install dependencies
+              run: |
+                python -m pip install --upgrade pip
+                pip install requests==2.32.3
+              
+            - name: Send on merge
+              run: |
+                .github/scripts/api.py $GH_TOKEN ${{ github.repository }} $PR_NUMBER $ENDPOINT
