--- a/.github/workflows/ai-merge.yml
+++ b/.github/workflows/ai-merge.yml
@@ -17,6 +17,8 @@ jobs:
     if: github.event.pull_request.merged == true
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
