--- a/.github/workflows/ai-merge.yml
+++ b/.github/workflows/ai-merge.yml
@@ -29,6 +29,17 @@ jobs:
           cd .github/scripts
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          cd ../..
+
+      - name: Set up node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: |
+          cd .github/scripts
+          npm install
 
       - name: Sent summary
         run: |
